<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    tools:context="androidapp.byco.ui.AboutActivity">

    <FrameLayout
        android:id="@+id/app_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="-8dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_rec_background_16dp_corners"
        android:backgroundTint="@color/light_blue"
        android:outlineProvider="background"
        app:layout_constraintBottom_toTopOf="@+id/privacy_policy"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/app_icon_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_rec_background_24dp_corners"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="64dp"
        android:paddingTop="8dp"
        android:paddingEnd="64dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/app_icon"
        app:layout_constraintEnd_toEndOf="@+id/app_icon"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/BycoText.Black.Small"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            style="@style/BycoText.Black.Small"
            android:textAlignment="center"
            tools:text="2.0.1" />
    </LinearLayout>

    <TextView
        android:id="@+id/privacy_policy"
        style="@style/BycoText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:drawableEnd="@drawable/ic_baseline_link_24"
        android:drawableTint="@color/web_links"
        android:text="@string/privacy_link"
        android:textStyle="normal"
        android:layout_marginBottom="8dp"
        android:textColor="@color/web_links"
        app:layout_constraintBottom_toTopOf="@+id/dependencies_licenses"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/licenses_label"
        style="@style/BycoText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/licenses"
        app:layout_constraintBottom_toTopOf="@+id/close"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_license"
        style="@style/BycoText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/app_license"
        android:textStyle="normal"
        android:textColor="@color/web_links"
        app:layout_constraintBottom_toTopOf="@+id/close"
        app:layout_constraintStart_toEndOf="@id/licenses_label" />

    <TextView
        android:id="@+id/dependencies_licenses"
        style="@style/BycoText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/dependencies_license"
        android:textStyle="normal"
        android:textColor="@color/web_links"
        app:layout_constraintBottom_toTopOf="@+id/close"
        app:layout_constraintStart_toEndOf="@id/app_license" />

    <Button
        android:id="@+id/close"
        style="@style/BycoAlertDialogButton"
        android:layout_marginEnd="-4dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>