<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:keepScreenOn="true"
    tools:context="androidapp.byco.ui.RidingActivity">

    <androidapp.byco.ui.views.MapView
        android:id="@+id/map"
        style="@style/BycoMap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:centerFromBottom="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speedBackground" />

    <ImageView
        android:id="@+id/gradient_corner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/map_fade_gradient_corner"
        app:layout_constraintBottom_toBottomOf="@id/overflow_menu"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/directions_back"
        app:layout_constraintTop_toTopOf="@id/overflow_menu"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/map_fade_gradient"
        app:layout_constraintBottom_toBottomOf="@id/overflow_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gradient_corner"
        app:layout_constraintTop_toTopOf="@id/overflow_menu"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/cursor"
        app:layout_constraintBottom_toBottomOf="@id/map"
        app:layout_constraintEnd_toEndOf="@id/map"
        app:layout_constraintStart_toStartOf="@id/map"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/directionIndicator"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/directions_indicator"
        app:layout_constraintBottom_toBottomOf="@id/cursor"
        app:layout_constraintEnd_toEndOf="@id/cursor"
        app:layout_constraintStart_toStartOf="@id/cursor"
        app:layout_constraintTop_toTopOf="@id/cursor"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/speedBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-67dp"
        android:background="@color/speed_shade"
        app:layout_constraintBottom_toBottomOf="@id/speedWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/speedBackgroundDividerBottom"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/speed_shade_divider"
        app:layout_constraintBottom_toBottomOf="@id/speedBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidapp.byco.ui.views.NotchSafeFrameLayout
        android:id="@+id/speedWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:addPadding="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/speed"
            style="@style/BycoText.White.Fixed.Speed"
            android:layout_marginTop="-40dp"
            android:layout_marginBottom="-40dp"
            android:includeFontPadding="false"
            android:text="12"
            tools:ignore="HardcodedText" />

    </androidapp.byco.ui.views.NotchSafeFrameLayout>

    <TextView
        android:id="@+id/speed_unit"
        style="@style/BycoText.White.Fixed.Label"
        android:text="@string/speed_unit_imperial"
        app:layout_constraintEnd_toEndOf="@id/speedWrapper"
        app:layout_constraintStart_toStartOf="@id/speedWrapper"
        app:layout_constraintTop_toBottomOf="@id/speedWrapper" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/speedBackground"
        app:layout_constraintEnd_toStartOf="@id/timeWrapper"
        app:layout_constraintTop_toBottomOf="@+id/speedWrapper">

        <TextView
            android:id="@+id/battery_label"
            style="@style/BycoText.White.Fixed.Label"
            android:labelFor="@id/battery"
            android:text="@string/battery_pct_label"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/battery"
            style="@style/BycoText.White.Fixed"
            android:visibility="invisible"
            tools:text="43 %"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/speedBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedWrapper">

        <TextView
            android:id="@+id/timeLabel"
            style="@style/BycoText.White.Fixed.Label"
            android:labelFor="@id/time"
            android:text="@string/time_label" />

        <TextView
            android:id="@+id/time"
            style="@style/BycoText.White.Fixed"
            tools:text="1:23" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/speedBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedWrapper"
        tools:alpha="1"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/rideDurationLabel"
            style="@style/BycoText.White.Fixed.Label"
            android:labelFor="@id/rideDuration"
            android:text="@string/ride_duration_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/rideDuration"
            style="@style/BycoText.White.Fixed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rideDurationLabel"
            tools:text="1:43" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_stop_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/ride"
        app:layout_constraintStart_toStartOf="@+id/speedBackground"
        app:layout_constraintTop_toBottomOf="@+id/speedWrapper">

        <ImageButton
            android:id="@+id/record_stop"
            style="@style/BycoRecordButton"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/stop_ride"
            android:visibility="visible" />

    </LinearLayout>

    <androidapp.byco.ui.views.CoachMarkView
        android:id="@+id/record_coach"
        style="@style/BycoCoachMark"
        android:importantForAccessibility="noHideDescendants"
        app:arrowDirection="start"
        app:layout_constraintStart_toEndOf="@id/record_stop_wrapper"
        app:layout_constraintTop_toTopOf="@id/record_stop_wrapper"
        app:persistentId="riding_activity/record_coach"
        app:text="@string/record_coach"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/overflow_menu"
        style="?attr/borderlessButtonStyle"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonWidth"
        android:contentDescription="@string/overflow_menu_desc"
        android:src="@drawable/ic_more_vert_24_with_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <androidapp.byco.ui.views.CoachMarkView
        android:id="@+id/previous_rides_coach"
        style="@style/BycoCoachMark"
        android:layout_marginTop="-8dp"
        android:labelFor="@id/overflow_menu"
        app:arrowDirection="topEnd"
        app:layout_constraintEnd_toEndOf="@id/overflow_menu"
        app:layout_constraintTop_toBottomOf="@id/overflow_menu"
        app:persistentId="riding_activity/previous_rides_coach"
        app:text="@string/previous_rides_coach" />

    <LinearLayout
        android:id="@+id/location_permission_rationale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedBackground"
        tools:visibility="visible">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_outline_location_on_24"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/BycoText.White.Small"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/location_permission_rationale"
            android:textAlignment="center" />

        <Button
            android:id="@+id/location_permission_request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/allow_location_access_button" />
    </LinearLayout>

    <androidapp.byco.ui.views.ElevationView
        android:id="@+id/elevation_profile"
        style="@style/BycoElevation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidapp.byco.ui.views.NotchSafeFrameLayout
        android:id="@+id/climbData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:alpha="0"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        app:addPadding="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/elevation_profile"
        tools:alpha="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/climbLeft"
                style="@style/BycoText.White.Large"
                android:includeFontPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="500 ft" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidapp.byco.ui.views.NotchSafeFrameLayout>

    <ImageButton
        android:id="@+id/directions_back"
        style="?attr/borderlessButtonStyle"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonWidth"
        android:contentDescription="@string/get_directions_back"
        android:src="@drawable/ic_home_24_with_outline"
        app:layout_constraintEnd_toStartOf="@+id/overflow_menu"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <androidapp.byco.ui.views.CoachMarkView
        android:id="@+id/directions_back_coach"
        style="@style/BycoCoachMark"
        android:layout_marginTop="-8dp"
        android:importantForAccessibility="noHideDescendants"
        app:arrowDirection="topEnd"
        app:layout_constraintEnd_toEndOf="@id/directions_back"
        app:layout_constraintTop_toBottomOf="@id/directions_back"
        app:persistentId="riding_activity/directions_back_coach"
        app:text="@string/directions_back_coach" />

</androidx.constraintlayout.widget.ConstraintLayout>